HVAC Backup 2/objects/Transaction_Note__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Process_start_date__c</fullName>
        <label>Approval Process start date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conrt_Inv_Credit_Note_Composite_Key__c</fullName>
        <formula>Service_Contract__r.ContractNumber +  Invoice__r.Invoice_No__c +  Transaction_Note_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conrt Inv Credit Note Composite Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Id__c</fullName>
        <label>Credit Note Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Note_Approval_Status__c</fullName>
        <label>Debit Note Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval From SDE</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval From AM</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval From CFS</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>SAP Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Invoice__r.Invoice_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Purchase_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Purchase Line Item</label>
        <referenceTo>Local_Purchase_Line_Items__c</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note_Id__c</fullName>
        <label>Note Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Debit Note</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReAssign_to_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReAssign to AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassign_To_CFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassign To CFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_By_SDE_Date__c</fullName>
        <label>Rejected By SDE Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_By_SDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected By SDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chiller - Bluestar Engineer assigned component</fullName>
                </value>
                <value>
                    <fullName>Duplicate ticket</fullName>
                </value>
                <value>
                    <fullName>Not able to close</fullName>
                </value>
                <value>
                    <fullName>Dealer not assigned</fullName>
                </value>
                <value>
                    <fullName>Third party installation done</fullName>
                </value>
                <value>
                    <fullName>Retail/Residential Customer-PMS on customer demand customer not in contract customer not allowing for Services</fullName>
                </value>
                <value>
                    <fullName>Stop services due to payment issue</fullName>
                </value>
                <value>
                    <fullName>No Safe to work</fullName>
                </value>
                <value>
                    <fullName>Wrong Channel mapped</fullName>
                </value>
                <value>
                    <fullName>Product scrapped</fullName>
                </value>
                <value>
                    <fullName>Site closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Return_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return Order</label>
        <referenceTo>ReturnOrder</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDEApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SF_Transaction_Note_Id__c</fullName>
        <label>SF Transaction Note Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAMApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transaction_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>in Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Note_Id__c</fullName>
        <label>Transaction Note Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMR</fullName>
                </value>
                <value>
                    <fullName>FGR</fullName>
                </value>
                <value>
                    <fullName>PMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Transaction Notes</relationshipLabel>
        <relationshipName>Transaction_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Amount__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Debit_Note_Approval_Status__c</columns>
        <columns>Department__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CFS_Transaction_Note</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Channel_Partner__c</columns>
        <columns>Debit_Note_Approval_Status__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>CFS</label>
        <queue>CFS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Transaction Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Notes</pluralLabel>
    <recordTypes>
        <fullName>Credit_Note</fullName>
        <active>true</active>
        <label>Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit_Note</fullName>
        <active>true</active>
        <label>Debit Note</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>